--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 
+
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>N-Gram Processor</title></head><body>
 <div style="text-align: center;"><br>
@@ -28,9 +29,9 @@ Processor is simple enough:<br>
 
 <div style="text-align: left; margin-left: 280px;">- creation of word n-gram lists out of input text, with n-gram frequencies<br>
 - listing of document counts (in how many docs an n-gram occurs)<br>
-- combination of large numbers of lists (of one n) into a single list<br>
+- a menu-based interface (new to version 0.6)<br>
 - unicode support<br>
-- support for processing of reasonably large corpora (depending on hardware)<br>
+- support for processing of large corpora, hardware allowing<br>
 - support for processing of annotated corpora
 </div>
 &nbsp;
@@ -49,7 +50,7 @@ run Perl code and bash shell code.<br>
 <img src="bar.png" alt=""><br>
 <br><a href="https://github.com/buerki/ngramprocessor/releases">download</a> |
 <a href="https://github.com/buerki/ngramprocessor" target="_blank">project
-page on github</a> | <a href="http://www.users.waitrose.com/%7Eyoujin/index.html" target="_blank">about the author</a><br>
+page on github</a> | <a href="http://www.cardiff.ac.uk/people/view/148384-buerki-andreas" target="_blank">about the author</a><br>
 <br>
 <br>
 <br>
